--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,6 @@ img {
   padding-left: 0;
   display: flex;
   gap: 40px;
-  padding: 24px 0 ;
 }
 .page-nav .link {
   color: #2e2f42;
@@ -87,6 +86,7 @@ img {
   text-align: left;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  padding: 24px 0;
 }
 .page-nav .link:hover,
 .page-nav .link:focus {
@@ -220,7 +220,6 @@ button:focus {
 }
 .card-set-team .container {
   padding: 32px 0;
-
 }
 .card-set .card-set-team {
   width: calc((100% - 72px) / 4);
@@ -232,22 +231,21 @@ button:focus {
   text-align: center;
 }
 .section-portfolio {
-  padding-top: 120px; 
+  padding-top: 120px;
   padding-bottom: 120px;
 }
 .card-set-portfolio {
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
-   row-gap: 48px;
-
+  row-gap: 48px;
 }
 .card-set-portfolio .card-portfolio {
   border: 1px solid #e7e9fc;
   width: calc((100% - 48px) / 3);
 }
 .card-portfolio .container {
-  padding: 32px 16px
+  padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
 }
@@ -278,7 +276,7 @@ button:focus {
   background-color: #2e2f42;
   display: flex;
   flex-wrap: wrap;
-   padding: 100px 0;
+  padding: 100px 0;
 }
 .footer .container {
   margin: 100px 156px;
