--- a/css/styles.css
+++ b/css/styles.css
@@ -253,8 +253,8 @@ button:focus {
   line-height: 1.2;
   letter-spacing: 0.02em;
   text-align: center;
-  margin-bottom: 8px
-} 
+  margin-bottom: 8px;
+}
 .class-text {
   color: #434455;
   line-height: 1.5;
