--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,8 @@ img {
 }
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header .container {
   display: flex;
@@ -79,23 +81,27 @@ img {
   gap: 40px;
 }
 .page-nav .link {
-  color: #2e2f42;
+  color: #404bbf;
   font-weight: 500;
   font-size: 16px;
   text-align: left;
   line-height: 1.5;
   letter-spacing: 0.02em;
   padding: 24px 0;
-  transition: color 250ms ease-out;
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .page-nav .link:hover,
 .page-nav .link:focus {
   color: #404bbf;
 }
-.page-nav .link:hover::after,
-.page-nav .link:focus::after {
+.page-nav .link:hover::after {
   display: block;
   content: '';
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
   border-radius: 2px;
   min-width: 48px;
   height: 4px;
@@ -115,7 +121,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-decoration: none;
-  transition: color 250ms ease-out;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address .link-address:hover,
 .address .link-address:focus {
@@ -166,7 +172,7 @@ img {
   border-radius: 4px;
   height: 56px;
   border: none;
-  transition: color 250ms ease-out;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button:hover,
 button:focus {
@@ -263,7 +269,7 @@ button:focus {
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   background: #ffffff;
   text-align: center;
-  transition: color 250ms ease-out;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card-set-team:hover {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
@@ -287,7 +293,7 @@ button:focus {
   padding: 12px;
   width: 40px;
   height: 40px;
-  transition: color 250ms ease-out;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-icon {
   display: flex;
@@ -330,7 +336,7 @@ button:focus {
   width: 100%;
   height: 100%;
   transform: translateY(100%);
-  transition: transform 250ms ease-in-out;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-box:hover .overlay {
   transform: translateY(0);
@@ -408,7 +414,7 @@ button:focus {
   padding: 8px;
   width: 40px;
   height: 40px;
-  transition: color 250ms ease-out;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-icon {
   display: flex;
