--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,7 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 1440px;
 }
 .page-title {
   background-color: #2e2f42;
@@ -148,7 +149,7 @@ img {
   background-position: center center;
   background-size: cover;
   padding: 188px 0;
-  max-width: 1440px;
+  
 }
 .page-title .title-hero {
   color: #ffffff;
@@ -239,7 +240,7 @@ button:focus {
 }
 .section-team {
   background-color: #f4f4fd;
-  padding: 120px 0;
+  
 }
 
 .section-title {
@@ -281,20 +282,26 @@ button:focus {
 .social {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   gap: 24px;
   margin-bottom: 32px;
   margin-left: 16px;
   margin-right: 16px;
 }
+.social-box {
+width: 40px;
+  height: 40px;
+}
 .social-link {
   display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #4d5ae5;
   border-radius: 50%;
   padding: 12px;
-  width: 40px;
-  height: 40px;
+ width: 100%;
+ height: 100%;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-top: 8px;
 }
@@ -303,7 +310,8 @@ button:focus {
   flex-direction: row;
   align-items: center;
 }
-.social-link:hover {
+.social-link:hover,
+.social-link:focus {
   background-color: #404bbf;
 }
 
