--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,6 @@ img {
 .header nav {
   display: flex;
   align-items: center;
-  gap: 76px;
 }
 
 .container {
@@ -80,7 +79,7 @@ img {
   display: flex;
   gap: 40px;
 }
-.page-nav .link {
+.page-nav .link-1 {
   color: #404bbf;
   font-weight: 500;
   font-size: 16px;
@@ -96,7 +95,7 @@ img {
   color: #404bbf;
 }
 
-.page-nav .link::after {
+.page-nav .link-1::after {
   display: block;
   min-width: 48px;
   margin-top: 20px;
@@ -138,6 +137,7 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 1440px;
 }
 .page-title {
   background-color: #2e2f42;
@@ -146,12 +146,11 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(/images/background-image.jpg);
+    url(./background-image.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   padding: 188px 0;
-  max-width: 1440px;
 }
 .page-title .title-hero {
   color: #ffffff;
@@ -218,6 +217,7 @@ button:focus {
 .content-icon {
   display: block;
 }
+
 .content-list {
   width: calc((100% - 72px) / 4);
 }
@@ -254,6 +254,7 @@ button:focus {
   margin: 0 auto 72px;
   min-width: 162px;
   text-align: center;
+  padding-top: 120px;
 }
 .card-set {
   display: flex;
@@ -268,7 +269,6 @@ button:focus {
 
 .card-set .card-set-team {
   width: calc((100% - 72px) / 4);
-  margin-bottom: 32px;
   border-radius: 0 0 4px 4px;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
@@ -287,9 +287,6 @@ button:focus {
   justify-content: center;
   align-items: center;
   gap: 24px;
-  margin-bottom: 32px;
-  margin-left: 16px;
-  margin-right: 16px;
 }
 .social-box {
   width: 40px;
@@ -305,7 +302,6 @@ button:focus {
   width: 100%;
   height: 100%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-top: 8px;
 }
 .social-icon {
   display: flex;
@@ -331,14 +327,14 @@ button:focus {
 .card-set-portfolio .card-portfolio {
   border-bottom: 1px solid #e7e9fc;
   width: calc((100% - 48px) / 3);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .card-portfolio {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card-portfolio:hover {
   transform: translateY(0%);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-box {
   position: relative;
@@ -377,7 +373,6 @@ button:focus {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-
   margin-bottom: 8px;
 }
 
@@ -386,26 +381,25 @@ button:focus {
   line-height: 1.5;
   letter-spacing: 0.02em;
   font-weight: 400;
+  margin-bottom: 8px;
 }
 
 .footer {
   background-color: #2e2f42;
-  display: flex;
-  flex-wrap: wrap;
   padding: 100px 0;
 }
 .footer .container {
   display: flex;
-  gap: 16px;
-  align-items: baseline;
-  margin-left: 156px;
-  flex-direction: column;
+  align-items: flex-start;
+  max-width: 1158px;
+  margin: 0 auto;
 }
 .div-logo {
-  margin-right: 120px;
+  width: 264px;
 }
 .logo-footer {
   display: inline-block;
+  margin-bottom: 8px;
 }
 .span-footer {
   color: #f4f4fd;
@@ -421,7 +415,8 @@ button:focus {
   display: flex;
   flex-direction: column;
   gap: 16px;
-  min-width: 208px;
+  width: 208px;
+  margin-left: 120px;
 }
 .social-media .social-text {
   color: #ffffff;
