--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,15 @@ img {
 .page-nav .link:focus {
   color: #404bbf;
 }
+.page-nav .link {
+  color: #2e2f42;
+  font-weight: 500;
+  font-size: 16px;
+  text-align: left;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding: 24px 0;
+}
 
 .page-nav .link-first::after {
   display: block;
@@ -241,6 +250,8 @@ button:focus {
 }
 .section-team {
   background-color: #f4f4fd;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .section-title {
@@ -253,7 +264,6 @@ button:focus {
   margin: 0 auto 72px;
   min-width: 162px;
   text-align: center;
-  padding-top: 120px;
 }
 .card-set {
   display: flex;
@@ -274,11 +284,6 @@ button:focus {
   background: #ffffff;
   text-align: center;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.card-set-team:hover {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  background: var(--white);
 }
 .social {
   display: flex;
@@ -357,7 +362,7 @@ button:focus {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-box:hover .overlay {
+.card-portfolio:hover .overlay {
   transform: translateY(0);
 }
 .card-portfolio .portfolio {
@@ -416,7 +421,6 @@ button:focus {
   flex-direction: column;
   gap: 16px;
   width: 208px;
-  margin-left: 120px;
 }
 .social-media .social-text {
   color: #ffffff;
