--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,7 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 1440px;
 }
 .page-title {
   background-color: #2e2f42;
@@ -158,7 +159,6 @@ img {
   background-position: center center;
   background-size: cover;
   padding: 188px 0;
-  max-width: 1440px;
 }
 .page-title .title-hero {
   color: #ffffff;
@@ -417,10 +417,7 @@ button:focus {
   max-width: 264px;
 }
 .social-media {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  width: 208px;
+  margin-right: 80px;
 }
 .social-media .social-text {
   color: #ffffff;
@@ -457,4 +454,255 @@ button:focus {
 .footer-social .social-link:hover,
 .footer-social .social-link:focus {
   background-color: #31d0aa;
+}
+.footer-form {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+.subscribe-text {
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+
+.email {
+  width: 264px;
+  height: 40px;
+  border-radius: 4px;
+  background-color: #2e2f42;
+  border: 1px solid #ffffff;
+}
+input::placeholder {
+  font-size: 12px;
+  font-weight: 400;
+  color: #ffffff;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+}
+.footer-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 16px;
+  border-radius: 4px;
+  padding: 8px 24px;
+  width: 165px;
+  height: 40px;
+  background: #4d5ae5;
+  border: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+}
+.btn-icon {
+  fill: #ffffff;
+}
+.backdrop {
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-open {
+  opacity: 1;
+  pointer-events: initial;
+  visibility: visible;
+}
+.modal {
+  position: absolute;
+  background-color: #fcfcfc;
+  top: 50%;
+  left: 50%;
+  width: 408px;
+  min-height: 584px;
+  border-radius: 4px;
+  transform: translateX(-50%) translateY(-70%);
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-open .modal {
+  transform: translateX(-50%) translateY(-50%);
+  opacity: 1;
+}
+.modal-btn {
+  background-color: #e7e9fc;
+  border: 1px solid #d0d2e3;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: #404bbf;
+  fill: #ffffff;
+}
+.modal-btn-icon {
+  stroke: none;
+}
+.modal-text {
+  margin-top: 72px;
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
+  /* line-height: 24px; */
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+}
+.modal-form-field {
+  margin: 8px 24px auto 24px;
+}
+.form-label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: block;
+  margin-bottom: 4px;
+}
+.modal-form-wrapper {
+  position: relative;
+}
+.form-input {
+  display: block;
+  width: 100%;
+  height: 40px;
+  border: 1px solid #a9aab1;
+  border-radius: 4px;
+  padding: 8px 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input:focus {
+  border-color: #4d5ae5;
+}
+.modal-form-icon {
+  fill: #2e2f42;
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  stroke: none;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input:focus + .modal-form-icon {
+  fill: #4d5ae5;
+}
+.form-textarea {
+  display: block;
+  border: 1px solid #a9aab1;
+  border-radius: 4px;
+  width: 100%;
+  height: 120px;
+  padding: 8px 16px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  resize: none;
+}
+.form-textarea:focus {
+  border-color: #4d5ae5;
+}
+.form-textarea::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #a9aab1;
+}
+.modal-form-agreement {
+  margin: 8px 24px 24px 24px;
+}
+.modal-form-box {
+  font-weight: 400;
+  font-size: 12px;
+
+  /* line-height: 14px; */
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #757575;
+}
+.modal-form-link {
+  /* line-height: 16px; */
+  line-height: 1.33333;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+}
+.custom-checkbox {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 2px;
+  border: 1px solid #a9aab1;
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+  cursor: pointer;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.custom-checkbox-icon {
+  fill: transparent;
+}
+.agreement-input:checked + .modal-form-box > .custom-checkbox {
+  background-color: #404bbf;
+  border-color: #404bbf;
+}
+.agreement-input:checked
+  + .modal-form-box
+  > .custom-checkbox
+  .custom-checkbox-icon {
+  fill: #f4f4fd;
+}
+.btn-submit {
+  font-family: 'Roboto', sans-serif;
+  color: #ffffff;
+  background-color: #4d5ae5;
+  font-weight: 500;
+  font-size: 16px;
+  white-space: nowrap;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  cursor: pointer;
+  padding: 16px 32px;
+  min-width: 169px;
+  border-radius: 4px;
+  height: 56px;
+  border: none;
+  margin: auto 120px 24px 119px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-submit:hover,
+.btn-submit:focus {
+  background-color: #404bbf;
 }
