--- a/css/styles.css
+++ b/css/styles.css
@@ -475,17 +475,19 @@ button:focus {
   width: 264px;
   height: 40px;
   border-radius: 4px;
-  background-color: #2e2f42;
+  background-color: transparent;
   border: 1px solid #ffffff;
-}
-input::placeholder {
   font-size: 12px;
-  font-weight: 400;
-  color: #ffffff;
   line-height: 2;
   letter-spacing: 0.04em;
   padding-left: 16px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  color: #ffffff;
 }
+.email::placeholder {
+  color: #ffffff;
+}
+
 .footer-btn {
   display: flex;
   align-items: center;
@@ -494,7 +496,7 @@ input::placeholder {
   gap: 16px;
   border-radius: 4px;
   padding: 8px 24px;
-  width: 165px;
+  min-width: 165px;
   height: 40px;
   background: #4d5ae5;
   border: none;
@@ -503,13 +505,15 @@ input::placeholder {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #ffffff;
+  cursor: pointer;
 }
 .btn-icon {
   fill: #ffffff;
+  margin-left: 16px;
 }
 .backdrop {
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(46, 47, 66, 0.4);
   top: 0;
   left: 0;
   width: 100%;
@@ -535,18 +539,25 @@ input::placeholder {
   width: 408px;
   min-height: 584px;
   border-radius: 4px;
+  padding: 72px 24px 24px 24px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   transform: translateX(-50%) translateY(-70%);
   opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-open .modal {
   transform: translateX(-50%) translateY(-50%);
   opacity: 1;
 }
 .modal-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #e7e9fc;
-  border: 1px solid #d0d2e3;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
   position: absolute;
   top: 24px;
   right: 24px;
@@ -554,16 +565,18 @@ input::placeholder {
   width: 24px;
   height: 24px;
   fill: #2e2f42;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-btn:hover,
 .modal-btn:focus {
   background-color: #404bbf;
+  border: none;
   fill: #ffffff;
 }
 .modal-btn-icon {
-  stroke: none;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-text {
   margin-top: 72px;
@@ -578,19 +591,20 @@ input::placeholder {
   color: #2e2f42;
 }
 .modal-form-field {
-  margin: 8px 24px auto 24px;
+  margin-bottom: 8px;
 }
 .form-label {
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
   display: block;
   margin-bottom: 4px;
+}
+.modal-form-wrapper {
   position: relative;
 }
-
 .form-input {
   display: block;
   width: 100%;
@@ -661,20 +675,21 @@ input::placeholder {
   align-items: center;
   justify-content: center;
   border-radius: 2px;
-  border: 1px solid #a9aab1;
+  border: 1px solid rgba(46, 47, 66, 0.4);
   width: 16px;
   height: 16px;
   margin-right: 8px;
   cursor: pointer;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  fill: transparent;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.custom-checkbox-icon {
-  fill: transparent;
-}
+
 .agreement-input:checked + .modal-form-box > .custom-checkbox {
   background-color: #404bbf;
-  border-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
 }
 .agreement-input:checked
   + .modal-form-box
@@ -697,8 +712,10 @@ input::placeholder {
   border-radius: 4px;
   height: 56px;
   border: none;
-  margin: auto 120px 24px 119px;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 24px 120px 24px 119px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn-submit:hover,
