--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,7 @@ img {
   background-position: center center;
   background-size: cover;
   padding: 188px 0;
+  
 }
 .page-title .title-hero {
   color: #ffffff;
@@ -567,7 +568,6 @@ button:focus {
   fill: #2e2f42;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-btn:hover,
 .modal-btn:focus {
@@ -579,7 +579,6 @@ button:focus {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-text {
-  margin-top: 72px;
   margin-bottom: 16px;
   font-weight: 500;
   font-size: 16px;
@@ -609,7 +608,8 @@ button:focus {
   display: block;
   width: 100%;
   height: 40px;
-  border: 1px solid #a9aab1;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent;
   border-radius: 4px;
   padding: 8px 38px;
   outline: transparent;
@@ -630,9 +630,13 @@ button:focus {
 .form-input:focus + .modal-form-icon {
   fill: #4d5ae5;
 }
+.modal-form-comment {
+  margin-bottom: 16px;
+}
 .form-textarea {
   display: block;
-  border: 1px solid #a9aab1;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent;
   border-radius: 4px;
   width: 100%;
   height: 120px;
@@ -647,21 +651,21 @@ button:focus {
 .form-textarea::placeholder {
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
-  color: #a9aab1;
+  color: rgba(46, 47, 66, 0.4);
 }
 .modal-form-agreement {
-  margin: 8px 24px 24px 24px;
+ margin-bottom: 24px;
 }
 .modal-form-box {
   font-weight: 400;
   font-size: 12px;
 
   /* line-height: 14px; */
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
-  color: #757575;
+  color: #8e8f99;
 }
 .modal-form-link {
   /* line-height: 16px; */
@@ -703,7 +707,7 @@ button:focus {
   background-color: #4d5ae5;
   font-weight: 500;
   font-size: 16px;
-  white-space: nowrap;
+  
   line-height: 1.5;
   letter-spacing: 0.04em;
   cursor: pointer;
@@ -712,11 +716,10 @@ button:focus {
   border-radius: 4px;
   height: 56px;
   border: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 24px 120px 24px 119px;
+  display: block;
+  margin-left: 95px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .btn-submit:hover,
 .btn-submit:focus {
