--- a/css/styles.css
+++ b/css/styles.css
@@ -159,7 +159,6 @@ img {
   background-position: center center;
   background-size: cover;
   padding: 188px 0;
-  
 }
 .page-title .title-hero {
   color: #ffffff;
@@ -567,7 +566,7 @@ button:focus {
   height: 24px;
   fill: #2e2f42;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-btn:hover,
 .modal-btn:focus {
@@ -656,7 +655,7 @@ button:focus {
   color: rgba(46, 47, 66, 0.4);
 }
 .modal-form-agreement {
- margin-bottom: 24px;
+  margin-bottom: 24px;
 }
 .modal-form-box {
   font-weight: 400;
@@ -707,7 +706,7 @@ button:focus {
   background-color: #4d5ae5;
   font-weight: 500;
   font-size: 16px;
-  
+
   line-height: 1.5;
   letter-spacing: 0.04em;
   cursor: pointer;
@@ -719,7 +718,6 @@ button:focus {
   display: block;
   margin-left: 95px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 .btn-submit:hover,
 .btn-submit:focus {
