--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,8 @@ img {
   background-position: center center;
   background-size: cover;
   padding: 188px 0;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 .page-title .title-hero {
   color: #ffffff;
